# pandera-forge

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README_DATABRICKS.md  example_generator.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
docs/: CHANGELOG.md
examples/: databricks_example.py  validate_excel_files.py  validate_local_csv_files_in_downloads.py
pandera_forge/: __init__.py  code_generator.py  constants.py  field_analyzer.py  generator.py  llm_enricher.py  name_sanitizer.py  pattern_detector.py  type_mapper.py  validator.py
pandera_forge/core/: __init__.py  base_field_analyzer.py  base_generator.py  base_type_mapper.py
pandera_forge/databricks/: __init__.py  connector.py  generator.py
pandera_forge/pandas/: __init__.py  pandas_field_analyzer.py  pandas_generator.py  pandas_type_mapper.py
pandera_forge/spark/: __init__.py  spark_field_analyzer.py  spark_generator.py  spark_type_mapper.py
pandere_forge/: field_analyzer.py  pattern_detector.py
tests/: __init__.py  test_code_generator.py  test_field_analyzer.py  test_generator.py  test_generator_extended.py  test_name_sanitizer.py  test_pattern_detector.py  test_validator.py
tests/core/: __init__.py
tests/databricks/: __init__.py
tests/pandas/: __init__.py
tests/spark/: __init__.py  test_spark_components.py
