[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandera-forge"
version = "0.1.0"
description = "Automatic Pandera DataFrameModel generator from pandas DataFrames"
readme = "README.md"
authors = [
    {name = "Thijs Hakkenberg", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["pandera", "pandas", "dataframe", "validation", "schema", "generator"]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "pandera>=0.20.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "isort>=5.13.0",
]
llm = [
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "ollama>=0.3.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/thijshakkenbergecolab/pandera-forge"
Documentation = "https://github.com/thijshakkenbergecolab/pandera-forge#readme"
Repository = "https://github.com/thijshakkenbergecolab/pandera-forge.git"
Issues = "https://github.com/thijshakkenbergecolab/pandera-forge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pandera_forge*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=pandera_forge --cov-report=term-missing"